@@ -26,23 +26,21 @@ import java.util.stream.Collectors;
 @Slf4j
 @Service
 public class UserInfoServiceImpl implements UserInfoService {
-
+    private static final int SLEEP_MILLIS = 3000;
+    private static final int DEFAULT_PAGE_SIZE = 100;
+    private static final Pattern PHONE_NUMBER_REGEX = Pattern.compile("^(13[0-9]|14[01456879]|15[0-35-9]|16[2567]|17[0-8]|18[0-9]|19[0-35-9])\\d{8}$");
+    private static final Pattern EMAIL_REGEX = Pattern.compile("^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$");
+    private static final ExecutorService EXECUTOR_SERVICE = Executors.newFixedThreadPool(8);
     @Autowired
     private UserInfoDao userInfoDao;
-
     @Autowired
     private DepartmentInfoService departmentInfoService;
-
-    private static final Pattern phoneNumberRegex = Pattern.compile("^(13[0-9]|14[01456879]|15[0-35-9]|16[2567]|17[0-8]|18[0-9]|19[0-35-9])\\d{8}$");
-    private static final Pattern emailRegex = Pattern.compile("^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$");
-
-    private static final ExecutorService EXECUTOR_SERVICE = Executors.newFixedThreadPool(8);
 
     @Override
     public UserInfo createUser(UserInfo userInfo) {
 
         try {
-            Thread.sleep(3000);
+            Thread.sleep(SLEEP_MILLIS);
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
@@ -72,10 +70,10 @@ public class UserInfoServiceImpl implements UserInfoService {
         if (userInfo.getDirectSupervisorId() <= 0) {
             throw new BusinessException(ErrorEnum.USER_DIRECT_SUPERVISOR_EMPTY);
         }
-        if (!phoneNumberRegex.matcher(userInfo.getPhoneNumber()).matches()) {
+        if (!PHONE_NUMBER_REGEX.matcher(userInfo.getPhoneNumber()).matches()) {
             throw new BusinessException(ErrorEnum.USER_PHONE_NUMBER_ERROR);
         }
-        if (!emailRegex.matcher(userInfo.getEmail()).matches()) {
+        if (!EMAIL_REGEX.matcher(userInfo.getEmail()).matches()) {
             throw new BusinessException(ErrorEnum.USER_EMAIL_ERROR);
         }
 
@@ -98,7 +96,7 @@ public class UserInfoServiceImpl implements UserInfoService {
     public UserInfo updateUser(UserInfo userInfo) {
         checkUpdateUser(userInfo);
         try {
-            Thread.sleep(3000);
+            Thread.sleep(SLEEP_MILLIS);
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
@@ -106,16 +104,14 @@ public class UserInfoServiceImpl implements UserInfoService {
         if (existUser.isEmpty()) {
             throw new BusinessException(ErrorEnum.USER_NOT_EXIST);
         }
-        Optional<DepartmentInfo> departmentInfo = departmentInfoService.queryBySupervisorId(userInfo.getDirectSupervisorId())
-                .stream()
-                .findFirst();
+        Optional<DepartmentInfo> departmentInfo = departmentInfoService.queryBySupervisorId(userInfo.getDirectSupervisorId()).stream().findFirst();
 
         departmentInfo.ifPresent(d -> userInfo.setDepartmentId(d.getId()));
 
         long nowTime = System.currentTimeMillis();
         userInfo.setUpdateTime(nowTime);
         userInfoDao.update(userInfo);
-        return fillName(Arrays.asList(userInfoDao.findById(userInfo.getId()).get())).stream().findFirst().orElse(null);
+        return fillName(List.of(userInfoDao.findById(userInfo.getId()).get())).stream().findFirst().orElse(null);
     }
 
     private void checkUpdateUser(UserInfo userInfo) {
@@ -131,10 +127,10 @@ public class UserInfoServiceImpl implements UserInfoService {
         if (userInfo.getDirectSupervisorId() <= 0) {
             throw new BusinessException(ErrorEnum.USER_DIRECT_SUPERVISOR_EMPTY);
         }
-        if (!phoneNumberRegex.matcher(userInfo.getPhoneNumber()).matches()) {
+        if (!PHONE_NUMBER_REGEX.matcher(userInfo.getPhoneNumber()).matches()) {
             throw new BusinessException(ErrorEnum.USER_PHONE_NUMBER_ERROR);
         }
-        if (!emailRegex.matcher(userInfo.getEmail()).matches()) {
+        if (!EMAIL_REGEX.matcher(userInfo.getEmail()).matches()) {
             throw new BusinessException(ErrorEnum.USER_EMAIL_ERROR);
         }
 
@@ -180,18 +176,17 @@ public class UserInfoServiceImpl implements UserInfoService {
 
     @Override
     public FilterResponse<List<UserInfo>> filter(String userName, String phoneNumber, UserType userType, int page, int pageSize) {
-        LOG.info("UserInfoServiceImpl filter. userName:{},phoneNumber:{},userType:{},page:{},pageSize:{}",
-                userName, phoneNumber, userType, page, pageSize);
+        LOG.info("UserInfoServiceImpl filter. userName:{},phoneNumber:{},userType:{},page:{},pageSize:{}", userName, phoneNumber, userType, page, pageSize);
         int count = userInfoDao.count(userName, phoneNumber, userType);
         if (count <= 0) {
             return new FilterResponse(page, pageSize);
         }
-        pageSize = Math.min(pageSize, 100);
-        int offset = (page - 1) * pageSize;
-        int limit = pageSize;
+        int queryPageSize = Math.min(pageSize, DEFAULT_PAGE_SIZE);
+        int offset = (page - 1) * queryPageSize;
+        int limit = queryPageSize;
         List<UserInfo> userInfos = userInfoDao.queryByUserNameAndPhoneNumber(userName, phoneNumber, userType, offset, limit);
         userInfos = fillName(userInfos);
-        return new FilterResponse(count, page, pageSize, userInfos);
+        return new FilterResponse(count, page, queryPageSize, userInfos);
     }
 
     private List<UserInfo> fillName(List<UserInfo> users) {
@@ -210,12 +205,10 @@ public class UserInfoServiceImpl implements UserInfoService {
             return List.of();
         }
 
-        Map<Long, UserInfo> supervisorsMap = CollectionUtils.isEmpty(supervisors)
-                ? new HashMap<>()
-                : supervisors.stream().collect(Collectors.toMap(UserInfo::getId, s -> s, (k1, k2) -> k1));
-        Map<Long, DepartmentInfo> departmentInfoMap = CollectionUtils.isEmpty(departmentInfos)
-                ? new HashMap<>()
-                : departmentInfos.stream().collect(Collectors.toMap(DepartmentInfo::getId, d -> d, (k1, k2) -> k1));
+        Map<Long, UserInfo> supervisorsMap = CollectionUtils.isEmpty(supervisors) ? new HashMap<>() : supervisors.stream()
+                .collect(Collectors.toMap(UserInfo::getId, s -> s, (k1, k2) -> k1));
+        Map<Long, DepartmentInfo> departmentInfoMap = CollectionUtils.isEmpty(departmentInfos) ? new HashMap<>() : departmentInfos.stream()
+                .collect(Collectors.toMap(DepartmentInfo::getId, d -> d, (k1, k2) -> k1));
 
         return users.stream().map(u -> {
             Optional.ofNullable(supervisorsMap.get(u.getDirectSupervisorId())).ifPresent(s -> u.setDirectSupervisorName(s.getUserName()));
